2014-01-14  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Documented all methods in the `Frontend` class
    * JastAddJ now uses the same exit codes as Javac
    * Deprecated the `Frontend.process` method - will be replaced by
    `Frontend.run` which returns compile error codes.
    * Added `Frontend(String,String)` constructor taking the compiler name and
    version so that it is not necessary to override the `name()` and
    `version()` methods.
    * The `Frontend.processArgs()` method now has return type int, rather than
    void. Returning nonzero from `processArgs()` will abort the compilation
    and cause the compiler to exit with an exit code indicating configuration
    error.

2014-01-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Improved performance significantly by adding some caching back into the
    classpath handling code.
    * Renamed `FilePath` to `SourceFilePath`.
    * Added `ClassPath` class which contains classpath configuration. This
    class lazily initializes itself when needed.
    * Replaced `PathPart.packages()` with `PathPart.hasPackage(String)`.
    * `FolderPath` does not scan entire directory structure for packages, only
    polls single directory for each `hasPackage` query.
    * `JarFilePath` caches the package index so that subsequent `hasPackage`
    queries are faster.

2014-01-11  Görel Hedin <gorel.hedin@cs.lth.se>

    * Added option -nowarn for disabling warning messages.

2014-01-07  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed error where some things were not properly pretty-printed in
    semantic error messages
    * Changed the error messages for:
        + imported type conflicting with visible type error
        + method invocation type error (added argument index)
        + qualified this access error (added enclosing type name)

2013-12-19  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Refactored classpath handling. PathPart is now abstract and all concrete