@@ -1,5 +1,6 @@
 2014-01-14  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
+    * JastAddJ now fails to compile if the output directory does not exist
     * Documented all methods in the `Frontend` class
     * JastAddJ now uses the same exit codes as Javac
     * Deprecated the `Frontend.process` method - will be replaced by
